# minimal-system-status

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: release.yml
src/: common.rs  info.rs  main.rs
