[package]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "minimal-system-status"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
human_bytes = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
derive-new = "0.5"
lazy_static = "1.4.0"
serde_json = "1.0.113"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
